fix sending SysEx, add log4j2.xml